# fuse-ptfs

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_debug.sh  configure.ac  fuse-ptfs.spec  fuse_ptfs.c  fuse_ptfs_device.c  fuse_ptfs_filesys.c  fuse_ptfs_log.c  lib.sh
cmake/: Hardening.cmake
include/: fuse_ptfs_device.h
src/: Makefile.am  config.h.in  fuse_ptfs.c  fuse_ptfs_filesys.c
src/include/: fuse_ptfs_device.h  fuse_ptfs_filesys.h  fuse_ptfs_log.h
